Fixed button horizontal stretch

--- a/theme.css
+++ b/theme.css
@@ -131,7 +131,7 @@ action-button button {
   box-shadow: 0px 4px 5px 1px rgba(0, 0, 0, 0.2);
   padding: 15px 40px;
   width: 18vw;
-  height: calc(18vw * 1); /* Add this and see if it looks better (* 0.866)*/
+  height: calc(18vw * 1.1); /* Add this and see if it looks better (* 0.866)*/
   font-size: 1.5vw;
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
   transition: all 0.3s ease-in-out;
